--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico">no jpg file -->
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <link rel="stylesheet" href="#" type="text/css" />
+       <!-- boostrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="./css/style.css" type="text/css" />
   </head>
   <body>
     <h1>Hello, world!</h1>
